# damn

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
broker/: CMakeLists.txt
broker/src/: Broker.cpp  Broker.h  main.cpp
client/: CMakeLists.txt
client/registration-client/: CMakeLists.txt
client/registration-client/src/: DeviceData.h  Publisher.cpp  Publisher.h  RequestData.h  main.cpp  registrationclientmainwindow.cpp  registrationclientmainwindow.h  registrationclientmainwindow.ui
client/registration-client/src/dummy/: DummyDevicePublisher.cpp
client/visualization-client/: CMakeLists.txt
client/visualization-client/proto/: CMakeLists.txt  packet.proto
client/visualization-client/src/: Controller.cpp  Controller.h  DeviceData.cpp  DeviceData.h  DeviceDelegate.qml  DeviceFilterProxyModel.cpp  DeviceListModel.cpp  DeviceListModel.h  IPacket.h  IStoppableRunner.h  Listener.cpp  Listener.h  Packet.cpp  Packet.h  PacketType.h  Socket.cpp  Socket.h  main.cpp  main.qml  qml.qrc
client/visualization-client/src/dummy/: DummyDevicePublisher.cpp  DummyDevicePublisher.h
cmake/: DAMNCommonOptions.cmake  DAMNCompileOptions.cmake  DAMNFindCLI11.cmake  DAMNFindCereal.cmake  DAMNFindCppZmq.cmake  DAMNFindGTest.cmake  DAMNFindProtobuf.cmake  DAMNFindQT.cmake  DAMNFindSpdlog.cmake  DAMNFindZeroMQ.cmake
common/: CMakeLists.txt
common/proto/: CMakeLists.txt  packet.proto
common/src/: CerealUtils.h  EnumConverter.h  Looper.cpp  Looper.h  NetData.h  Packet.h  Socket.cpp  Socket.h  ZMQLooper.cpp  ZMQLooper.h  ZMQUtils.h
src/: CMakeLists.txt  Controller.cpp  Controller.h  DeviceData.cpp  DeviceDelegate.qml  DeviceFilterProxyModel.h  main.qml
test/: CMakeLists.txt
test/src/: Test_CerealUtils.cpp  Test_EnumConverter.cpp  Test_Looper.cpp  Test_ZMQUtils.cpp
